# Suzaku

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
codegen/: Cargo.toml
core/: Cargo.toml
core/src/: factory.rs  lib.rs
core/src/languages/: analyzer.rs  inode.rs  mod.rs  stack.rs
core/src/languages/java/: java_node.rs  listener.rs  mod.rs  parser_listener.rs  walk_listener.rs
extension-sdk/: Cargo.toml
extension-sdk/src/: element.rs  extractor.rs  lib.rs  mapper.rs  meta.rs  meta_type.rs  parser.rs  parser_listener.rs  reorganzier.rs  stack.rs  utils.rs
extension-sdk/src/language/: analyzer.rs  data_cleaner.rs  element.rs  inode.rs  ivertex.rs  mapper.rs  meta.rs  meta_type.rs  mod.rs  parser.rs  reorganzier.rs  reporter.rs
language-extensions/: Cargo.toml
language-extensions/src/: lib.rs
language-extensions/src/cpp/: mod.rs
language-extensions/src/cpp/data/: meta_type.rs  mod.rs
language-extensions/src/cpp/policies/: mod.rs  parser_listener.rs
language-extensions/src/java/: analyzer_policy.rs  data_clean_policy.rs  element.rs  graphviz.rs  graphviz_reporter.rs  java_node.rs  java_node_type.rs  mapper_policy.rs  meta.rs  mod.rs  node.rs  node_type.rs  parser_listener.rs  parser_policy.rs  vertex.rs
language-extensions/src/java/data/: graphviz.rs  meta_type.rs  mod.rs
language-extensions/src/java/policies/: analyzer_policy.rs  extractor_policy.rs  graphviz_reporter.rs  mapper_policy.rs  mod.rs  parser_listener.rs  parser_policy.rs  reorganizer.rs
language-extensions/src/java9/: java_node.rs  mod.rs  parser_listener.rs
(+2 files in other folders)
