[package]
name = "suzaku-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suzaku-extension-sdk = { path = "../extension-sdk" }
suzaku-language-extensions ={ path = "../language-extensions" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }