[package]
name = "suzaku-extension-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antlr-rust = { version = "0.3.0-beta" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
glob = { version = "0.3" }
strum = {version = "0.24", features = ["derive"]}
inflections = {version = "1.1"}
regex = { version = "1.7" }