[package]
name = "suzaku-language-extensions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suzaku-extension-sdk = { path = "../extension-sdk" }

antlr-rust = { version = "0.3.0-beta" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [ "unbounded_depth" ]}
serde_stacker = { version = "0.1" }
strum = {version = "0.24", features = ["derive"]}